JumpScript/tests/baselines/reference/unknownTypeErrors.errors.txt
tests/cases/compiler/unknownTypeErrors.jump(1,10): error TS2304: Cannot find name 'Unknown'.


==== tests/cases/compiler/unknownTypeErrors.jump (1 errors) ====
    var foo: Unknown = 0;
             ~~~~~~~
!!! error TS2304: Cannot find name 'Unknown'.